--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "lunar-javascript": "^1.7.0",
     "lunar-typescript": "^1.7.7",
     "next": "15.2.0",
+    "openai": "^4.86.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
